syntax = "proto3";

package assfire.api.v1.tsp;

message TwoOptAlgorithmState {
  int32 i = 1;
  int32 j = 2;
  int32 k = 3;
}

message TspAlgorithmState {
  repeated int32 points = 1;
  repeated int32 sequence = 2;
  oneof instance {
    TwoOptAlgorithmState two_opt_algorithm_state = 3;
  }
}